# ChangeLog for xfce-extra/mousepad
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/mousepad/ChangeLog,v 1.22 2007/01/29 19:14:59 welp Exp $

  29 Jan 2007; Peter Weller <welp@gentoo.org> mousepad-0.2.12.ebuild:
  A number of fixes

*mousepad-0.2.12 (25 Jan 2007)

  25 Jan 2007; Peter Weller <welp@gentoo.org> +mousepad-0.2.12.ebuild:
  Bumped to 0.2.12

  23 Jan 2007; Peter Weller <welp@gentoo.org> mousepad-0.2.10.ebuild:
  Removing usage of virtual/x11,  and hardcoding in depends. Minor clean ups.

  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org> mousepad-0.2.10.ebuild:
  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
  xfce44.eclass.

  02 Jan 2007; Andrej Kacian <ticho@gentoo.org> mousepad-0.2.2-r1.ebuild:
  Stable on x86, bug #158084.

  31 Dec 2006; Markus Rothe <corsair@gentoo.org> mousepad-0.2.2-r1.ebuild:
  Stable on ppc64; bug #158084

  28 Dec 2006; Joshua Nichols <nichoj@gentoo.org> mousepad-0.2.2-r1.ebuild:
  Fixed dpendencies, see bug #130573.

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -mousepad-0.2.1.ebuild,
  -mousepad-0.2.4.ebuild, -mousepad-0.2.6.ebuild:
  Pruned old versions with new versions with same or better keywords.

  06 Dec 2006; Elfyn McBratney <beu@gentoo.org> mousepad-0.2.10.ebuild:
  Add back required SRC_URI.

  09 Dec 2006; Joshua Nichols <nichoj@gentoo.org> mousepad-0.2.10.ebuild:
  Fixed SRC_URI, as reported by drac.

*mousepad-0.2.10 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> +mousepad-0.2.10.ebuild:
  Version bump for RC2. See bug #146563.

*mousepad-0.2.6 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +mousepad-0.2.6.ebuild:
  Xfce beta 2 builds.

  23 May 2006; Markus Rothe <corsair@gentoo.org> mousepad-0.2.2.ebuild:
  Stable on ppc64

  28 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-mousepad-0.2.1,
  files/digest-mousepad-0.2.2, files/digest-mousepad-0.2.2-r1, Manifest: