@@ -1,3 +1,0 @@
-MD5 c943c9408cbb35be73c45f75d945b34d mousepad-0.2.10.tar.bz2 318200
-RMD160 49f4bbb7737d57f299e970a20a51d22e0a06848a mousepad-0.2.10.tar.bz2 318200
-SHA256 be02f782fe6790cb0e19e720bce68423ccbee6c12b4bea8c8579a263cd8166df mousepad-0.2.10.tar.bz2 318200
