@@ -1,17 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/mousepad/mousepad-0.2.10.ebuild,v 1.5 2007/01/23 18:41:16 welp Exp $
-
-inherit xfce44
-
-xfce44_beta
-
-DESCRIPTION="Xfce4 text editor"
-SRC_URI="http://www.xfce.org/archive/xfce-${XFCE_MASTER_VERSION}/src/${P}${COMPRESS}"
-HOMEPAGE="http://www.xfce.org"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-IUSE="debug"
-
-RDEPEND=">=x11-libs/gtk+-2.2
-	>=xfce-base/libxfce4util-${XFCE_MASTER_VERSION}
-	>=xfce-base/libxfcegui4-${XFCE_MASTER_VERSION}"
