@@ -1,3 +1,0 @@
-MD5 9648fc403f9eb4baede230644bf5638d xfce4-mixer-4.3.99.2.tar.bz2 449110
-RMD160 6e95a8b4ee0f6e3ddfdbf0d576dfa2db0a0864a2 xfce4-mixer-4.3.99.2.tar.bz2 449110
-SHA256 6beda572195d6f7ed108e0659592d1ca6ad5088e769e3d219cc4114533f8b169 xfce4-mixer-4.3.99.2.tar.bz2 449110
