@@ -1,3 +1,0 @@
-MD5 195e52cfe7913ca0b97d20a7ca26bde7 xfce4-mixer-4.4.0.tar.bz2 467548
-RMD160 f845c8f28e25f0a08133937a48a0e71de93ace6e xfce4-mixer-4.4.0.tar.bz2 467548
-SHA256 8ea1382470fa9375496799941e4def4c27a7d7d8c5cf4e9a5e13883e5ec1739d xfce4-mixer-4.4.0.tar.bz2 467548
