@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-mixer
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.74 2007/01/31 16:36:25 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.75 2007/02/03 02:28:45 nichoj Exp $
+
+  03 Feb 2007; Joshua Nichols <nichoj@gentoo.org>
+  -xfce4-mixer-4.3.99.2.ebuild, -xfce4-mixer-4.4.0.ebuild:
+  Removing old version.
 
 *xfce4-mixer-4.4.0-r1 (31 Jan 2007)
 
